[package]
name = "max32660-pac"
authors = ["Blayne Kettlewell <rbkettlewell@gmail.com"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for MAX 32660 microcontroller"
keywords = ["arm", "cortex-m", "max32660", "svd2rust"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rbkettlewell/max32660-pac"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.4"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]
